correct series link in ChampionshipItem fix link overflow in ChampionshipItem

--- a/client/src/components/championship-item/championship-item.styles.scss
+++ b/client/src/components/championship-item/championship-item.styles.scss
@@ -9,6 +9,7 @@
 
   .display-grid {
     display: grid;
+    padding: 0;
     grid-template-columns: repeat(4, 25%);
     grid-template-rows: repeat(4, 25%);
     width: 200px;
@@ -19,6 +20,7 @@
 
     &:hover {
       opacity: 1;
+      text-decoration: none;
     }
 
     .abbrv {
