--- a/client/src/components/new/new.styles.scss
+++ b/client/src/components/new/new.styles.scss
@@ -14,6 +14,7 @@
     align-items: center;
     width: 200px;
     height: 200px;
+    padding: 0;
     border: 2px dashed black;
     font-size: 100px;
     padding-bottom: 25px;
@@ -22,6 +23,7 @@
 
     &:hover {
       opacity: 1;
+      text-decoration: none;
     }
   }
 }
